# contact-manager

./: justfile
.github/workflows/: build.yml
Source/backend/: .env  Cargo.toml  docker-compose.yml  justfile  sqlx-data.json
Source/backend/migrations/: 20230528120841_initial.sql  20230529183755_contacts_view.sql
Source/backend/requests/: contacts.hurl
Source/backend/src/: main.rs
Source/backend/src/db/: mod.rs
Source/backend/src/db/entities/: contacts.rs  mod.rs
Source/backend/src/db/repositories/: contacts.rs  distribution_lists.rs  events.rs  mod.rs
Source/backend/src/domain/: contacts.rs  distribution_lists.rs  events.rs  mod.rs
Source/backend/src/domain/services/: contacts.rs  distribution_lists.rs  mod.rs  organizations.rs  persons.rs
Source/backend/src/events/: mod.rs
Source/backend/src/http_api/: contacts.rs  distribution_lists.rs  mod.rs
Source/backend/src/http_api/middleware/: mod.rs  transaction.rs
Source/frontend/: justfile  pubspec.yaml
Source/frontend/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
Source/frontend/lib/: contact_list.dart  distribution_list.dart  main.dart
Source/frontend/lib/api/: contact_api.dart  distribution_list_api.dart  http.dart
Source/frontend/lib/api/models/: contact.dart  distribution_list.dart  distribution_list.g.dart  email.dart  email.g.dart  person.dart  (+3 more)
Source/frontend/lib/dialogs/: edit_distribution_list.dart  edit_organization.dart  edit_person.dart
Source/frontend/lib/state/: contacts_state.dart  distribution_list_state.dart
Source/frontend/lib/widgets/: form_field.dart
(+3 files in other folders)
