[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.6", features = ["postgres", "macros", "runtime-tokio-rustls", "uuid", "chrono", "json"] }
async-trait = "0.1"
color-eyre = "0.6"
tokio = { version = "1", features = ["tracing", "macros", "rt-multi-thread"] }
uuid = { version = "1.3", features = ["serde", "v4"] }
serde = "1"
serde_json = "1"
axum = "0.6"
tracing-subscriber = "0.3"
tracing = "0.1"
